--- a/crazybook/pom.xml
+++ b/crazybook/pom.xml
@@ -17,6 +17,17 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
+  
+  <distributionManagement>
+   <repository>
+      <id>releases</id>
+      <url>http://localhost:8081/nexus/content/repositories/releases/</url>
+   </repository>
+   <snapshotRepository>
+      <id>snapshots</id>
+      <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
+   </snapshotRepository>
+  </distributionManagement>
 
   <dependencies>
     <dependency>
