--- a/crazybook/pom.xml
+++ b/crazybook/pom.xml
@@ -20,11 +20,13 @@
   
   <distributionManagement>
    <repository>
-      <id>releases</id>
+      <id>123</id>
+      <name>Releases</name>
       <url>http://localhost:8081/nexus/content/repositories/releases/</url>
    </repository>
    <snapshotRepository>
       <id>snapshots</id>
+      <name>Snapshots</name>
       <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
    </snapshotRepository>
   </distributionManagement>
