--- a/crazybook/pom.xml
+++ b/crazybook/pom.xml
@@ -20,7 +20,7 @@
   
   <distributionManagement>
    <repository>
-      <id>123</id>
+      <id>releases</id>
       <name>Releases</name>
       <url>http://localhost:8081/nexus/content/repositories/releases/</url>
    </repository>
